# astarte-device-sdk-cpp

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  README.md  REUSE.toml  build_sample.ps1  build_sample.sh  build_sample_conan.sh  conanfile.py  docs.sh  end_to_end.sh  format.sh  get_started.md  tidy.sh  unit.sh
.github/workflows/: build-grpc.yaml  build-mqtt.yaml  build.yaml  doc-check.yaml  doc-generation.yaml  e2e-test.yaml  reuse-lint.yml  static.yaml  unit.yaml
cmake/: AstarteGrpcTransport.cmake  AstarteMQTTTransport.cmake  AstarteMqttTransport.cmake
doc/: astarte-device-sdk.doxyfile.in  astarte-device-sdk.extended.doxyfile.in
end_to_end/: CMakeLists.txt  README.md  conanfile.py
end_to_end/include/: action.hpp  action_mqtt.hpp  case.hpp  device_factory.hpp  orchestrator.hpp  transport.hpp  utils.hpp
end_to_end/include/constants/: astarte_interfaces.hpp  data_sets.hpp  file_paths.hpp  interfaces.hpp  time.hpp
end_to_end/include/testcases/: .clang-format  device_add_remove_interface.hpp  device_aggregate.hpp  device_datastream.hpp  device_property.hpp  device_reconnection.hpp  device_status.hpp  server_aggregate.hpp  server_datastream.hpp  server_property.hpp
end_to_end/include/testcases/mqtt/: device_pairing.hpp
end_to_end/src/: main.cpp
include/astarte_device_sdk/: data.hpp  device.hpp  device_mqtt.hpp  errors.hpp  exceptions.hpp  formatter.hpp  individual.hpp  msg.hpp  object.hpp  ownership.hpp  property.hpp  stored_property.hpp  type.hpp
include/astarte_device_sdk/grpc/: device_grpc.hpp
include/astarte_device_sdk/mqtt/: config.hpp  connection.hpp  crypto.hpp  device_mqtt.hpp  errors.hpp  exceptions.hpp  formatter.hpp  introspection.hpp  pairing.hpp
private/: aggregate_private.h  device_impl.hpp  exponential_backoff.hpp  grpc_formatter.hpp  shared_queue.hpp
private/grpc/: device_grpc_impl.hpp  grpc_converter.hpp  grpc_formatter.hpp  grpc_interceptors.hpp
private/mqtt/: connection.hpp  credentials.hpp  crypto.hpp  device_mqtt_impl.hpp  helpers.hpp  interface.hpp  introspection.hpp  mapping.hpp  persistence.hpp  serialize.hpp
private/mqtt/connection/: callbacks.hpp  connection.hpp  listener.hpp
samples/: main.cpp
samples/grpc/: README.md
samples/grpc/native/: README.md  conanfile.py  main.cpp
samples/grpc/qt/: README.md  conanfile.py  main.cpp
samples/mqtt/native/: CMakeLists.txt  README.md  conanfile.py  config.hpp  main.cpp  store.hpp
samples/qt/: CMakeLists.txt  build_qt_example.sh
samples/simple/: conanfile.py  main.cpp
scripts/: .pylintrc  build_for_tidy_conan.py  build_sample_cmake.py  build_sample_cmake.sh  build_sample_conan.py  build_sample_conan.sh  clean_sample.py  setup_conan_env.sh  setup_python.sh
src/: aggregate.cpp  data.cpp  device.cpp  device_impl.cpp  errors.cpp  exceptions.cpp  grpc_converter.cpp  individual.cpp  msg.cpp  object.cpp  property.cpp  stored_property.cpp
src/grpc/: device_grpc.cpp  device_grpc_impl.cpp  grpc_converter.cpp  grpc_interceptors.cpp
src/mqtt/: config.cpp  connection.cpp  credentials.cpp  crypto.cpp  device_mqtt.cpp  device_mqtt_impl.cpp  errors.cpp  interface.cpp  introspection.cpp  mapping.cpp  pairing.cpp  persistence.cpp  serialize.cpp
src/mqtt/connection/: callbacks.cpp  connection.cpp  listener.cpp
unit/: CMakeLists.txt  conversion_test.cpp  crypto_test.cpp  data_test.cpp  device_id_test.cpp  errors_test.cpp  exponential_backoff_test.cpp  introspection_test.cpp  msg_test.cpp
